# pib_cli

./: .aspell.pws  .coveragerc  .gitignore  .hadolint.yml  .isort.cfg  .pre-commit-config.yaml  .pydocstyle  .pylint.rc  .readthedocs.yml  .yamllint.yml  CONTRIBUTING.md  README.md  SPEC.md  container  development.env  docker-compose.yml  pyproject.toml  setup.py  testing_shim
.cookiecutter/: cookiecutter.json
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/scripts/: build_container.sh  changelog.sh  cli_test.sh  gitleaks.sh  patch_pep.sh  release_docker.sh  release_pypi.sh  setup.sh  shellcheck.sh  upload_asset.sh
.github/workflows/: push.yml  push_wheel.yml  release.yml  release_pypi.yml
assets/: Dockerfile  cli.yml  config.yml  config_drift.diff  local.env  pib_cli  requirements-dev.txt  requirements.txt
assets/bash/: .bashrc
documentation/: requirements.txt
documentation/source/: conf.py  index.rst
documentation/source/_static/: markdown.css
documentation/source/cli/: cli.rst  cli_reference.rst  user_guide.rst  yaml_config.rst
documentation/source/codebase/: codebase.rst
documentation/source/codebase/pib_cli/pib_cli/: cli.rst  pib_cli.rst
documentation/source/codebase/pib_cli/pib_cli/config/: config.rst  yaml_config.rst  yaml_keys.rst
documentation/source/codebase/pib_cli/pib_cli/patchbay/: patchbay.rst
documentation/source/codebase/pib_cli/pib_cli/support/: configuration.rst  container.rst  paths.rst  (+4 more)
documentation/source/locale/en/LC_MESSAGES/: about.po  cli.po  codebase.po  guide.po  index.po  introduction.po  project.po
documentation/source/project/: introduction.rst  readme.rst  repository.rst  spec.rst
pib_cli/: __init__.py  app.py  cli.py  commander.py  config.yml  container_init.sh  main.py
pib_cli/bash/: .bashrc  bash_customize  bash_git  bash_profile  bashrc  shim
pib_cli/cli/: __init__.py
pib_cli/cli/commands/: __init__.py  config_show.py  config_validate.py  config_version.py  config_where.py  container_setup.py  container_validate.py  container_version.py  customized.py  version.py
pib_cli/cli/commands/bases/: __init__.py  command.py  command_config.py
pib_cli/cli/commands/bases/fixtures/: __init__.py  command_harness.py  command_harness_config.py  command_harness_exceptions.py
pib_cli/cli/commands/tests/: test_config_show.py  test_config_validate.py  test_config_verson.py  test_config_where.py  test_container_setup.py  test_container_validate.py  test_container_version.py  test_customized.py  test_handler.py  test_version.py
pib_cli/cli/interface/: __init__.py
pib_cli/cli/interface/builtins/: __init__.py  config.py  container.py
pib_cli/cli/interface/custom/: __init__.py
pib_cli/cli/interface/tests/builtins/: test_builtins.py  test_config.py  test_container.py
pib_cli/cli/interface/tests/custom/: test_custom.py
pib_cli/cli/interface/tests/fixtures/: cli_harness.py  config_cli_harness.py  custom_cli_harness.py
pib_cli/cli/interface/tests/internal/: test_builtins.py  test_config.py  test_container.py
pib_cli/config/: __init__.py  config.yml  default_cli_config.yml  schema.json  yaml_keys.py
pib_cli/config/locale/: __init__.py
pib_cli/config/locale/en/LC_MESSAGES/: base.po
pib_cli/config/schemas/: cli_base_schema_v1.0.0.json  cli_base_schema_v2.0.0.json  cli_base_schema_v2.1.0.json  cli_cmd_schema_v0.1.0.json
pib_cli/patchbay/: __init__.py
pib_cli/support/: __init__.py  cli_utilities.py  commands.py  configuration.py  container.py  dev_container.py  external_commands.py  internal_commands.py  path_map.py  paths.py  processes.py  runner.py  state.py
pib_cli/support/container/: __init__.py  exceptions.py  installer.py
pib_cli/support/container/bases/: __init__.py  container.py
pib_cli/support/container/bases/tests/: test_container.py
pib_cli/support/container/tests/: test_container.py  test_exceptions.py  test_installer.py
pib_cli/support/iterators/: __init__.py  cli_custom_commands.py  container_bash_files.py  container_shim_file.py
pib_cli/support/iterators/bases/: __init__.py  file_copy_base.py
pib_cli/support/iterators/bases/fixtures/: __init__.py  file_copy_base_harness.py
pib_cli/support/iterators/tests/: test_cli_custom_commands.py  test_container_bash_files.py  test_container_shim_files.py
pib_cli/support/mixins/: __init__.py  json_file.py  text_file.py  yaml_file.py
pib_cli/support/mixins/tests/: test_json_file.py  test_text_file.py  test_yaml_file.py
pib_cli/support/tests/: conftest.py  fixtures.py  test_commands.py  test_configuration.py  test_container.py  test_external_commands.py  test_internal_commands.py  test_path_map.py  test_paths.py  test_processes.py  test_runner.py  test_state.py
pib_cli/support/user_configuration/: __init__.py  selected.py  user_configuration_file.py  validator.py  versions.py
pib_cli/support/user_configuration/bases/: __init__.py  command_selector_base.py  user_configuration_base.py  version_base.py  version_legacy_base.py
pib_cli/support/user_configuration/bases/fixtures/: command_selector_base_harness.py  user_configuration_base_harness.py  version_base_harness.py
pib_cli/support/user_configuration/selectors/: __init__.py  command_selector.py  command_selector_legacy.py
pib_cli/support/user_configuration/selectors/tests/: test_command_selector.py  test_command_selector_legacy.py
pib_cli/support/user_configuration/tests/: test_selected.py  test_user_configuration.py  test_user_configuration_file.py  test_validator.py  test_versions.py
pib_cli/tests/: fixtures.py  patchbay.py  test_cli.py  test_commander.py  test_config.py  test_main.py  test_processes.py  test_utilities.py
scripts/: commander.sh  dev  extras.sh  hostmachine.sh  release.sh  settings.sh
scripts/common/: common.sh  documentation.sh  wheel.sh
scripts/extras/: common.sh
scripts/hooks/: check_config.sh  check_container.sh  check_formatting.sh  check_spelling.sh  check_translations.sh  pre-commit  protected_branches.sh
scripts/utilities/: aspell_sort.sh  check_release.sh  install_gitleaks.sh  install_tomll.sh  reformat_file.sh  version_bump.sh
